# fractals-cuda

./: .gitignore  .patterns.txt  CMakeLists.txt  README.md  makefile  mandelbrot.cu  palette.cu  palette.h  requirements.txt
assets/themes/: rainbow.mbt
include/CLI/: cli.h
include/Fractal/: burning_ship.cuh  fractal.cuh  julia.cuh  mandelbrot.cuh  newton.cuh  palette.cuh  sierpinski.cuh
include/Fractal/Params/: FractalParams.h
include/GUI/: add_pattern.h  animation.h  app.h  coordinate_label.h  menu.h
include/Util/: globals.h  util.h
src/: add_pattern.cpp  cli.cpp  cli.h  main.cpp  mandelbrot.cu  mandelbrot.h  palette.cu  palette.h
src/CLI/: cli.cpp
src/Fractal/: burning_ship.cu  fractal.cu  julia.cu  mandelbrot.cu  newton.cu  palette.cu  sierpinski.cu
src/GUI/: add_pattern.cpp  add_pattern.h  animation.cpp  app.cpp  coordinate_label.cpp  coordinate_label.h  menu.cpp
src/Util/: globals.cpp  util.cpp
themes/: classic-vga.mt  default.mt  pink.mbt  ultra-fractal.mt
